2007-09-03 [paul]	0.2.0

	0.2 released (initial release)

2007-09-03 [paul]	0.1.1cvs12

	* configure.ac
	* po/ca.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/pt_BR.po
	* po/sk.po
		added by Miquel Oliete, Ricardo Mones Lastra,
		Flammie Pirinen, Pader Rezso, Frederico
		Goncalves Guimaraes, Andrej Kacian
	* po/spam_report.pot
		removed

2007-08-16 [paul]	0.1.1cvs11

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-23 [colin]	0.1.1cvs10

	* src/spam_report.c
		Fix licence 

2007-07-13 [paul]	0.1.1cvs9

	* src/spam_report.c
		specify the license (GPL2+)

2007-07-11 [wwp]	0.1.1cvs8

	* aclocal.m4
		Removed that (generated) file.

2007-07-11 [colin]	0.1.1cvs7

	* COPYING
	* aclocal.m4
	* po/fr.po
	* po/spam_report.pot
	* src/gettext.h
	* src/spam_report.c
	* src/spam_report_prefs.c
	* src/spam_report_prefs.h
		Upgrade to GPLv3 or later

2007-07-06 [wwp]	0.1.1cvs6

	* src/spam_report.c
		Few speed optimizations.

2007-07-05 [wwp]	0.1.1cvs5

	* src/spam_report_prefs.c
	* src/spam_report.c
		Use the internal base64_encode'r instead of g_base64_encode,
		which is glib in 2.12.x only. Fixed spacing in prefs layout.

2007-07-05 [paul]	0.1.1cvs4

	* configure.ac
		g_base64_encode() needs GLib >= 2.12.x

2007-07-05 [colin]	0.1.1cvs3

	* src/spam_report.c
		Fix copy/paste error

2007-07-05 [colin]	0.1.1cvs2

	* .cvsignore
	* AUTHORS
	* COPYING
	* ChangeLog
	* INSTALL
	* Makefile.am
	* NEWS
	* PATCHSETS
	* README
	* aclocal.m4
	* autogen.sh
	* commitHelper
	* config.h.in
	* configure.ac
	* config/.cvsignore
	* config/Makefile.am
	* config/config.rpath
	* config/mkinstalldirs
	* po/.cvsignore
	* po/ChangeLog
	* po/Makefile.in.in
	* po/Makevars
	* po/POTFILES.in
	* po/fr.po
	* po/remove-potcdate.sin
	* po/spam_report.pot
	* src/.cvsignore
	* src/Makefile.am
	* src/gettext.h
	* src/spam_report.c
	* src/spam_report_prefs.c
	* src/spam_report_prefs.h
		First release of SpamReport, a plugin to report spam
		to online anti-spam services. For now, only Spam-Signal